<resources>
    <string name="app_name">Memento</string>

    <!-- Transitions -->
    <string name="transitionLogo">logoTransition</string>
    <string name="transitionEmail">emailTransition</string>


    <!-- Auth -->
    <string name="facebook_app_id">133493497287068</string>
    <string name="fb_login_protocol_scheme">fb133493497287068</string>

    <string name="auth_login_with_google">Log in with Google</string>
    <string name="auth_login_with_facebook">Log in with Facebook</string>
    <string name="auth_login_with_email">Log in with Email</string>
    <string name="auth_skip_login"><u>Log in later</u></string>
    <string name="auth_email_hint_email">Email</string>
    <string name="auth_email_hint_password">Password</string>
    <string name="auth_email_login">Log in</string>
    <string name="auth_email_create_account">Create account</string>
    <string name="auth_no_email_entered">No email entered</string>
    <string name="auth_no_password_entered">No password entered</string>
    <string name="auth_no_email_or_password_entered">No password or password entered</string>
    <string name="auth_wrong_input">Invalid Email or password. Try again!</string>
    <string name="auth_something_went_wrong">Something went wrong. Please try again later!</string>
    <string name="auth_incorrect_login">Incorrect email or password!</string>
    <string name="auth_progress_dialog_logging_in">Logging in…</string>
    <string name="auth_progress_dialog_creating_account">Creating account…</string>
    <string name="auth_logged_in">Logged in!</string>
    <string name="auth_account_created">Account created!</string>

</resources>
